--- a/refs.bib
+++ b/refs.bib
@@ -4,14 +4,16 @@
   booktitle={Theoretical foundations of learning environments},
   pages={286--299},
   year={2012},
-  publisher={Routledge}
+  publisher={Routledge},
+  url={https://www.academia.edu/36699359/What_is_a_community_of_practice_and_how_can_we_support_it}
 }
 
 @book{lave1991situated,
   title={Situated learning: Legitimate peripheral participation},
   author={Lave, Jean and Wenger, Etienne},
   year={1991},
-  publisher={Cambridge university press}
+  publisher={Cambridge university press},
+  doi={10.1017/CBO9780511815355}
 }
 
 @article{brown1991organizational,
@@ -22,7 +24,8 @@
   number={1},
   pages={40--57},
   year={1991},
-  publisher={Informs}
+  publisher={Informs},
+  doi={10.1287/orsc.2.1.40}
 }
 
 @incollection{constant1987social,
@@ -73,7 +76,8 @@
   volume={78},
   number={1},
   pages={139--146},
-  year={2000}
+  year={2000},
+  url={http://www.psycholosphere.com/Communities%20of%20Practice%20-20the%20organizational%20frontier%20by%20Wenger.pdf}
 }
 @inproceedings{kilner2004con4,
   title={The Con4-P Model of Learning Design for Professional Communities},
@@ -81,6 +85,7 @@
   booktitle={E-Learn: World Conference on E-Learning in Corporate, Government, Healthcare, and Higher Education},
   pages={1307--1311},
   year={2004},
+  url={https://www.learntechlib.org/primary/p/11510/},
   organization={Association for the Advancement of Computing in Education (AACE)}
 }
 @article{stevens2018building,
@@ -90,6 +95,7 @@
   volume={16},
   number={11},
   pages={e2005561},
+  doi={10.1371/journal.pbio.2005561},
   year={2018},
   publisher={Public Library of Science San Francisco, CA USA}
 }
